sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:3: error: '<-' expected but ')' found.
	for (i-< getNombreValeurs()-2 to 0 by -1) {
                                                ^AlgBubbleSort3:13: error: illegal start of simple expression
}
^